# CSE491-MTDS

./: .gitignore  CMakeLists.txt  Graph16.txt  MTDS  README.md  experiment.py  experiment2.py  experiment_results.xlsx  experiment_results_best.xlsx  experiments.txt  generate_experiments.py  main.cpp  requirements.txt
REMTDS/: MTDS.cpp  REMTDS.cpp  output_adjlist.txt  output_filtered.edges  rem  subgraphs.adj.txt  subgraphs.edges  synthetic.edges  synthetic1.edges
docs/: main_usage.md  seedProcessing.md  seedProcessingUsage.md
graphs/: graph1.edges  graph1.txt  graph10.edges  graph10_ground.txt  graph10_predicted.txt  graph1_ground_truth.txt  graph1_predicted.txt  graph1_predicted_labels.txt  graph1_seed.txt  graph1_truth.txt  graph2.edges  graph2_ground.txt  graph2_ground_truth.txt  graph2_predicted.txt  graph2_truth.txt  graph3.edges  graph3_ground.txt  graph3_ground_truth.txt  graph3_predicted.txt  graph3_predicted_labels.txt  graph3_seed.txt  graph4.edges  graph4_ground.txt  graph4_ground_truth.txt  graph4_predicted.txt  graph4_predicted_labels.txt  graph4_seed.txt  graph5.edges  graph5_ground.txt  graph5_ground_truth.txt  graph5_predicted.txt  graph5_predicted_labels.txt  graph5_seed.txt  graph6.edges  graph6_ground.txt  graph6_predicted.txt  graph7.edges  graph7_ground.txt  graph7_ground_truth.txt  graph7_predicted.txt  (+22 more)
include/: MTDS.h  clusterOneVersion.h  incrementalTriangleCount.h  norm.h  seedProcessing.h  simulatedAnnealing.h  subgraphAdjacency.h  triDense.h  triangleDensity.h  triangleEnumeration.h
iniVer/: TDS.cpp  TriAl.cpp  TriAl.h  iMTDS
(+142 files in other folders)
